changed to config.yml

--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 theme: jekyll-theme-primer
-title: $ patrikolin
-description: "personal wiki and playground"
+title: $olin.wiki
+description: "knowledge management"
 url: "https://olin.wiki"
 author:
   github: PatrikOlin
